--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/jest-dom": "^5.11.5",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "antd": "^4.12.3",
     "axios": "^0.21.1",
     "dayjs": "^1.10.3",
     "framer-motion": "^3.3.0",
