--- a/package.json
+++ b/package.json
@@ -3,6 +3,12 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@mantine/core": "^3.6.8",
+    "@mantine/hooks": "^3.6.8",
+    "@mantine/modals": "^3.6.8",
+    "@mantine/prism": "^3.6.8",
+    "@mantine/rte": "^3.6.8",
+    "@radix-ui/react-icons": "^1.0.3",
     "@react-spring/three": "^9.4.2",
     "@react-spring/web": "^9.4.2",
     "@testing-library/jest-dom": "^5.16.2",
@@ -12,6 +18,8 @@
     "@types/node": "^16.11.22",
     "@types/react": "^17.0.39",
     "@types/react-dom": "^17.0.11",
+    "install": "^0.13.0",
+    "npm": "^8.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-helmet": "^6.1.0",
