--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mantine/carousel": "^7.4.2",
     "@mantine/code-highlight": "^7.4.2",
     "@mantine/core": "^7.4.2",
     "@mantine/hooks": "^7.4.2",
